# gradido_blockchain_connector

./: .gitignore  .gitmodules  API.md  CMakeLists.txt  CMakeLists.txt.lib  Doxyfile  INSTALL.md  README.md  _base_table_8h_source.html  _connection_manager_8h_source.html  _gradido_blockchain_connector_8h_source.html  _gradido_node_r_p_c_8h_source.html  _group_8h_source.html  _json_creation_transaction_8h_source.html  _json_get_pending_transactions_8h_source.html  _json_global_group_add_8h_source.html  _json_list_transactions_8h_source.html  _json_login_8h_source.html  _json_open_connection_8h_source.html  _json_pack_transaction_8h_source.html  _json_register_address_transaction_8h_source.html  _json_request_handler_factory_8h_source.html  _json_send_transaction_iota_8h_source.html  _json_transaction_8h_source.html  _json_transaction_listener_8h_source.html  _json_transfer_transaction_8h_source.html  _json_unknown_8h_source.html  _migration_8h_source.html  _password_encryption_rate_limiter_8h_source.html  _pending_transactions_8h_source.html  _server_config_8h_source.html  _session_8h_source.html  _session_manager_8h_source.html  _user_8h_source.html  _user_backup_8h_source.html  _versions_manager_8h_source.html  annotated.html  class_apollo_decay_exception-members.html  class_apollo_decay_exception.html  class_apollo_decay_exception__inherit__graph.map  (+217 more)
.github/workflows/: generatePlantumlPng.yml  main.yml
Dockerfiles/: Dockerfile.debug  Dockerfile.release  Dockerfile.test
config/: blockchain_connector.properties
iota_rust_clib/: CMakeLists.txt  Cargo.toml
iota_rust_clib/include/: iota_rust_clib.h
iota_rust_clib/src/: lib.rs
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+34 more)
src/: ConnectionManager.cpp  ConnectionManager.h  GradidoBlockchainConnector.cpp  GradidoBlockchainConnector.h  GradidoNodeRPC.cpp  GradidoNodeRPC.h  PasswordEncryptionRateLimiter.cpp  PasswordEncryptionRateLimiter.h  ServerConfig.cpp  ServerConfig.h  SessionManager.cpp  SessionManager.h  main.cpp
src/JSONInterface/: JsonCreationTransaction.cpp  JsonCreationTransaction.h  JsonGetPendingTransactions.cpp  JsonGetPendingTransactions.h  JsonGlobalGroupAdd.cpp  JsonGlobalGroupAdd.h  JsonListTransactions.cpp  JsonListTransactions.h  JsonLogin.cpp  JsonLogin.h  JsonOpenConnection.cpp  JsonOpenConnection.h  JsonPackTransaction.cpp  JsonPackTransaction.h  JsonRegisterAddressTransaction.cpp  JsonRegisterAddressTransaction.h  JsonRequestHandlerFactory.cpp  JsonSendTransactionIota.cpp  JsonSendTransactionIota.h  JsonTransaction.cpp  JsonTransaction.h  JsonTransactionListener.cpp  JsonTransactionListener.h  JsonTransferTransaction.cpp  JsonTransferTransaction.h  JsonUnknown.h
src/cpp/: GradidoBlockchainConnector.cpp  ServerConfig.cpp  ServerConfig.h  main.cpp
src/cpp/JSONInterface/: JsonPackTransaction.cpp  JsonPackTransaction.h  JsonRequestHandler.cpp  JsonRequestHandler.h  JsonRequestHandlerFactory.cpp  JsonSendTransactionIota.cpp  JsonSendTransactionIota.h  JsonUnknown.h
src/cpp/SingletonManager/: MemoryManager.cpp  MemoryManager.h
src/cpp/lib/: DataTypeConverter.cpp  DataTypeConverter.h  IotaRequest.cpp  IotaRequest.h  JsonRPCRequest.cpp  JsonRequest.cpp  MemoryPage.cpp  MultithreadContainer.cpp  NotificationList.cpp  NotificationList.h
src/cpp/model/gradido/: GroupMemberUpdate.cpp  GroupMemberUpdate.h  Transaction.cpp  Transaction.h  TransactionBase.cpp  TransactionBase.h  TransactionBody.cpp  TransactionBody.h  TransactionCreation.cpp  TransactionCreation.h  TransactionTransfer.cpp  TransactionTransfer.h
src/cpp/test/: main.cpp  main.h
src/cpp/test/JSONInterface/: TestJsonHelper.cpp  TestJsonHelper.h  TestJsonPackTransaction.cpp  TestJsonPackTransaction.h  TestJsonSendTransactionIota.cpp  TestJsonSendTransactionIota.h
src/cpp/test/lib/: MockIotaHttpClientSession.cpp  MockIotaHttpClientSession.h  MockIotaRequest.cpp  MockIotaRequest.h
src/model/: PendingTransactions.cpp  PendingTransactions.h  Session.cpp  Session.h
src/model/import/: ApolloServer.cpp  ApolloServer.h  CommunityServer.cpp  CommunityServer.h  LoginServer.cpp  LoginServer.h
src/model/table/: BaseTable.cpp  BaseTable.h  Group.cpp  Group.h  Migration.cpp  Migration.h  Migrations.cpp  Migrations.h  TransactionClientDetail.cpp  TransactionClientDetail.h  User.cpp  User.h  UserBackup.cpp  UserBackup.h  VersionsManager.cpp  VersionsManager.h
src/plugins/apollo/: DecayDecimal.cpp  DecayDecimal.h
src/task/: CPUSheduler.cpp  CPUSheduler.h  CPUShedulerThread.cpp  CPUTask.cpp  CPUTaskGroup.cpp  CPUTaskGroup.h  CompareApolloWithGradidoNode.cpp  CompareApolloWithGradidoNode.h  PrepareApolloCreationTransaction.cpp  PrepareApolloCreationTransaction.h  PrepareApolloTransaction.cpp  PrepareApolloTransaction.h  PrepareApolloTransferTransaction.cpp  PrepareApolloTransferTransaction.h  PrepareCommunityCreationTransaction.cpp  PrepareCommunityCreationTransaction.h  PrepareCommunityTransferTransaction.cpp  PrepareCommunityTransferTransaction.h  RecoverLoginKeyPair.cpp  RecoverLoginKeyPair.h  SendTransactionToGradidoNode.cpp  SendTransactionToGradidoNode.h  Task.cpp  Thread.cpp  UpdateCreationTargetDate.cpp  UpdateCreationTargetDate.h
test/: CMakeLists.txt  TestMpfrHelper.cpp  TestMpfrHelper.h  main.cpp
test/JSONInterface/: TestJsonHelper.cpp  TestJsonHelper.h  TestJsonPackTransaction.cpp  TestJsonPackTransaction.h  TestJsonSendTransactionIota.cpp  TestJsonSendTransactionIota.h
test/lib/: MockIotaHttpClientSession.cpp  MockIotaRequest.cpp  MockIotaRequest.h
